compiler/tests/invalid_programs/classes/constant_instance_attribute.jm
?!TypeError

class Foo
  value:Int
  new fromFile(v:Int)
    value = v
  end
end

const foo = Foo.fromFile(12)
foo.value = 13
puts(foo.value)
